# Backend_SnapLinks

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  settings.py  startserver.py  vercel.json
server/database/: core.py
web/: index.html
