[tool.poetry]
name = "backend-quicklinker"
version = "0.1.0"
description = ""
authors = ["Roman505050 <myhun59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
